api-link-gw/beast/beast-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beast
  namespace: api-link-gw
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beast
            port:
              number: 8080
